2006-01-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCDocumentWriter.m:
   * Headers/Index/LCDocumentWriter.h:
   Use C type instead of objects to optimize the code.
   * Source/Index/LCFieldsReader.m:
   * Soruce/Index/LCFieldsWriter.m:
   Improve memory management.

2005-12-27 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCIndexSearcher.m:
   include float.h

2005-12-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   add autorelease pool to reduce memory usage.

2005-12-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCTermVectorsReader.m:
   initiate return value suggested by Dirk Theisen <d.theisen...>

2005-12-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCFieldCacheImpl.m:
   * Source/Search/LCBooleanScorer.m:
   fix missing 'return' suggested by Dirk Theisen <d.theisen...>

2005-12-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>
   * Source/Search/LCBooleanScorer.m:
   * Source/Search/LCBooleanMinShouldMatch.m:
   Pass all tests: Result: 51 classes, 127 methods, 651972 tests, 0 failed
   * Source/Analysis/LCAnalyzer.m:
   * Source/Index/LCDocumentWriter.m:
   * Source/Search/LCSmiliarity.m:
   * Source/Search/LCHits.m:
   * Source/Search/LCTopDocs.m:
   * Source/Search/LCTopFieldDocs.m:
   * Source/Search/LCIndexSearcher.m:
   * Source/Index/LCMultiReader.m:
   * Source/Index/TestMultiReader.m:
   * Headers/Index/Index.h:
   Update to date.

2005-12-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/QueryParser/LCQueryParser.m:
   * Headers/QueryParser/LCQueryParser.h:
   Add new method.
   * Source/Search/LCBooleanQuery.m:
   * Source/Search/LCBooleanScorer.m:
   Support minimumNumberShouldMatch.
   * Pass all tests.
   Result: 46 classes, 114 methods, 651959 tests, 0 failed

2005-12-12 Quentin Mathe <qmathe@club-internet.fr>

   * Source/Search/LCFieldSortedHitQueue.m:
    Fixed compilation on Linux (Ubuntu Linux x86) broken by the previous commit,